--- a/posts/software/snowflake/snowpro_notes.qmd
+++ b/posts/software/snowflake/snowpro_notes.qmd
@@ -965,6 +965,37 @@ We often need to `FLATTEN` the data.
 
 ### 4.8.2. Querying Semi-structured Data
 
+To access elements of a `VARIANT` column, we use a `:`. 
+
+For example, if the `raw_column` column has a top-level key of `heading1`, we can query:
+```
+SELECT raw_column:heading1
+FROM table_with_variant
+```
+
+We can also refer to columns by their position. So to access the first column:
+```
+SELECT $1:heading1
+FROM table_with_variant
+```
+
+To access **nested** elements, use `.`:
+```
+SELECT raw_column:heading1.subheading2
+FROM table_with_variant
+```
+
+If there is an array, we can **access elements of the array** with `[index]`. Arrays are 0-indexed, so to access the first element:
+```
+SELECT raw_column:heading1.subheading2.array_field[0]
+FROM table_with_variant
+```
+
+We may also need to **cast the types** of the element with `::`
+```
+SELECT raw_column:heading1.subheading2.array_field[0]::VARCHAR
+FROM table_with_variant
+```
 
 
 ### 4.8.3. Flatten Hierarchical Data
@@ -973,16 +1004,234 @@ We often need to `FLATTEN` the data.
 ### 4.8.4. Insert JSON Data
 
 
+## 4.9. Unstructured Data
+
+
+## 4.10. Data Sampling
+
+
+## 4.11. Tasks
+
+
+## 4.12. Streams
+
+
+
 # 5. Snowflake Tools and Connectors
 
+## 5.1. Connectors and Drivers
+
+Snowflake provides two interfaces:
+
+- Snowsight web UI
+- SnowSQL command line tool
+
+Drivers:
+
+- Go
+- JDBC
+- .NET
+- node.js
+- ODBC
+- PHP
+- Python
+
+Connectors:
+
+- Python
+- Kafka
+- Spark
+
+**Partner Connect** allows us to create a trial account for third-party add-ons to Snowflake and integrate them with Snowflake. 
+
+They span many different categories and tools - BI, CI/CD, etc.
+
+
+## 5.2. Snowflake Scripting
+
+Mostly used in stored procedures but can also be used for writing procedural code outside of this. 
+
+We can use@ if, case, for, repeat, while, loop
+
+This is written in a **“block”**:
+```
+DECLARE
+BEGIN 
+EXCEPTION
+END
+```
+
+`DECLARE` and `EXCEPTION` are optional. 
+
+This is available in Snowsight. 
+The classic UI or SnowSQL requires `$$` around the block. 
+
+**Objects** created in the block are *available outside* of it too. 
+**Variables** created in the block can only be used *inside* it. 
+
+This is a similar syntax, but different from **transactions** which use `BEGIN` and `END`. 
+
+
+## 5.3. Snowpark
+Snowpark API provides support for three programming languages: *Python, Java, Scala*. 
+
+Python code **converts to SQL** which then queries Snowflake with serverless Snowflake engine. 
+
+This means there is **no need to move data outside of Snowflake**. 
+
+Benefits:
+
+- Lazy evaluation
+- Pushdown - query is executed in Snowflake rather than unloading all data outside of Snowflake and then transforming
+- UDFs can be defined inline
 
 
 # 6. Continuous Data Protection
+
+## 6.1. Time Travel
+
+Data protection lifecycle. 
+Current data storage -> Time travel -> Fail safe
+
+What if someone drops a database or table accidentally? We need a backup to recover data. 
+Time travel enables accessing historical data. 
+
+We can:
+
+- query deleted or updated data
+- Restore dropped tables, schemas and databases
+- Create clones of tables, schemas and databases from a previous date 
+
+Time travel SQL query within a retention period. The AT keyword allows us to time travel. 
+
+SELECT * FROM table AT (TIMESTAMP >= timestamp)
+
+Or use offset in seconds. So for 10 minutes:
+
+SELECT * FROM table AT (OFFSET >= 10*60)
+
+Alternatively we can use BEFORE, where query ID is the ID where we messed things up :
+
+SELECT * FROM table BEFORE (STATEMENT>= query_id)
+
+Go to Activity -> Query History in the Snowsight UI to get the right query ID. 
+
+It is best practice to recover to an intermediate backup table first to confirm the recovered version is correct. Use 
+CREATE OR REPLACE TABLE table_name_backup
+
+
+Recover objects. 
+UNDROP TABLE table_name
+
+Same for SCHEMA or DATABASE. 
+
+Considerations. 
+UNDROP fails if an object with the same name already exists. 
+We need ownership privileges to UNDROP an object. 
+
+When working with time zones, it can be helpful to change the time zone to match your local time. This only affects the current session, not the whole account.  
+ALTER SESSION SET TIMEZONE = ‘UTC’
+
+
+## Retention Period 
+Retention period is the number of days for which historical data is preserved. Determines how far back we can time travel. 
+
+Configurable for table, schema, database or account. 
+
+The default DATA_RETENTION_TIME_IN_DAYS=1
+If we want to disable time travel, we can set this to 0. 
+
+We can set this when we create a table or alter is for an existing table
+ALTER TABLE table_name (
+SET DATA_RETENTION_TIME_IN_DAYS=2)
+
+We can set a minimum value at the account level
+ALTER ACCOUNT SET 
+MIN_ DATA_RETENTION_TIME_IN_DAYS=3
+
+The account type determines the maximum retention period. 
+Standard - 1
+Enterprise or higher - 90
+
+
+## Fail Safe
+
+This is for recovery beyond time travel.
+This is not configurable and set to 7 days beyond time travel period for permanent tables. 
+
+This is for disaster recovery. We as users cannot access this data. We have to contact Snowflake support to restore it for us. 
+
+
+## Storage costs
+Time travel and fail safe contribute to storage costs. 
+You only pay for what is modified. 
+You can see the breakdown in the Admin -> Usage tab. 
+
+You can see how much storage is being used with
+
+SELECT * FROM SNOWFLAKE_ACCOUNT_USAGE.TABLE_STORAGE_METRICS
+
+
+## Table types
+
+Permanent - CREATE TABLE. 0-90 days time travel + fail safe. Persist until dropped. 
+
+Transient - CREATE TRANSIENT TABLE. 0 or 1 day time travel. No fail safe. Persist until dropped.  For large tables that do not need to be protected. 
+
+Temporary - CREATE TEMPORARY TABLE. 0 or 1 day time travel. No fail safe. Only in session - deleted after the worksheet is closed. Non-permanent data just for this session. 
+
+These types are also available for other Snowflake objects: tables, stages, schema, database. 
+If a database is transient, so are all of its objects. 
+
+Temporary table names do not clash with permanent or transient tables. Temporary table takes precedence in the session and hides the others with the same name. 
+
+It is not possible to change the type of an existing object. 
+
 
 
 
 # 7. Zero-Copy Cloning and Sharing
 
+## Zero Copy Cloning
+
+Makes it easy to copy an existing object. 
+
+For example 
+
+CREATE TABLE table_name
+CLONE table_source
+
+We can clone (almost*) any object: database, schema, table, stream, file format, sequence, task, stage, pipe
+
+*the exceptions are pipes which can only be cloned if referencing an external stage, and stages which cannot be cloned for named internal stages. 
+When we clone a database or schema, all of its child objects are also cloned. 
+
+Copy diagram at 3:20
+
+It’s called a zero copy clone because it does not actually copy the data at clone time. It is a metadata operation (occurring in the cloud service layer). 
+
+The “copy” is a snapshot of the “original”. Both reference the same underlying micro partitions in block storage. Think of it like pass by reference rather than pass by value. 
+
+When modifying the “copy” Snowflake only stored the deltas, not the entire database again. The “original” and “copy” can be modified independently without affecting the other. 
+
+Can be used to create backups for dev work. 
+
+## Privileges. 
+The privileges of the CHILD objects are inherited from the clone source, but the cloned object itself (ie the cloned database or schema) are NOT inherited, they need to be specified separately by the administrator. 
+
+
+The privileges required to clone an object depends on the object:
+- table - SELECT privileges 
+- Pipe, stream, task - OWNER privileges 
+- All other objects - USAGE privileges 
+
+When we clone a table, its load history metadata is NOT copied. This means loaded data can be loaded again without causing a metadata clash. 
+
+We can clone from a time travel version of a table: 
+
+CREATE TABLE table_new
+CLONE table_source
+BEFORE (TIMESTAMP >= ‘2025-01-31 08:00:00’)
 
 # 8. Account and Security
 
