--- a/posts/software/snowflake/snowpro_notes.qmd
+++ b/posts/software/snowflake/snowpro_notes.qmd
@@ -1088,105 +1088,150 @@ Benefits:
 
 # 6. Continuous Data Protection
 
+This section covers the data protection lifecycle. 
+From most accessible to least accessible:
+
+```{mermaid}
+flowchart LR
+
+
+  A(Current data storage) --> B(Time travel) --> C(Fail safe)
+```
+
+
 ## 6.1. Time Travel
 
-Data protection lifecycle. 
-Current data storage -> Time travel -> Fail safe
-
-What if someone drops a database or table accidentally? We need a backup to recover data. 
-Time travel enables accessing historical data. 
+What if someone drops a database or table accidentally? We need a **backup to recover data**.
+*Time travel* enables accessing historical data. 
 
 We can:
 
-- query deleted or updated data
+- Query data that has been deleted or updated
 - Restore dropped tables, schemas and databases
 - Create clones of tables, schemas and databases from a previous date 
 
-Time travel SQL query within a retention period. The AT keyword allows us to time travel. 
+We can use a SQL query to access time travel data within a retention period. The `AT` keyword allows us to time travel. 
+```
+SELECT * 
+FROM table
+AT (TIMESTAMP >= timestamp)
+```
 
-SELECT * FROM table AT (TIMESTAMP >= timestamp)
+Or use `OFFSET` in seconds. So for 10 minutes:
+```
+SELECT * 
+FROM table 
+AT (OFFSET >= 10*60)
+```
 
-Or use offset in seconds. So for 10 minutes:
+Alternatively we can use `BEFORE`, where *query_ID* is the ID where we messed things up:
+```
+SELECT * 
+FROM table 
+BEFORE (STATEMENT>= query_id)
+```
 
-SELECT * FROM table AT (OFFSET >= 10*60)
+Go to `Activity -> Query History` in the Snowsight UI to get the correct query ID. 
 
-Alternatively we can use BEFORE, where query ID is the ID where we messed things up :
-
-SELECT * FROM table BEFORE (STATEMENT>= query_id)
-
-Go to Activity -> Query History in the Snowsight UI to get the right query ID. 
-
-It is best practice to recover to an intermediate backup table first to confirm the recovered version is correct. Use 
+It is best practice to **recover to an intermediate backup table first** to confirm the recovered version is correct. E.g.
+```
 CREATE OR REPLACE TABLE table_name_backup
+FROM table
+AT (TIMESTAMP >= timestamp)
+```
 
 
-Recover objects. 
+## 6.2. UNDROP
+
+We can use the `UNDROP` keyword to recover objects.
+```
 UNDROP TABLE table_name
+```
 
-Same for SCHEMA or DATABASE. 
+Same for `SCHEMA` or `DATABASE`.
 
 Considerations. 
-UNDROP fails if an object with the same name already exists. 
-We need ownership privileges to UNDROP an object. 
 
-When working with time zones, it can be helpful to change the time zone to match your local time. This only affects the current session, not the whole account.  
-ALTER SESSION SET TIMEZONE = ‘UTC’
+- UNDROP fails if an object with the **same name already exists**. 
+- We need **ownership privileges** to UNDROP an object. 
+
+When working with time zones, it can be helpful to change the time zone to match your local time. 
+This only affects the current session, not the whole account.  
+```
+ALTER SESSION SET TIMEZONE = 'UTC'
+```
 
 
-## Retention Period 
-Retention period is the number of days for which historical data is preserved. Determines how far back we can time travel. 
+## 6.3. Retention Period 
 
-Configurable for table, schema, database or account. 
+Retention period is the number of days for which historical data is preserved. 
+This determines how far back we can time travel. 
 
-The default DATA_RETENTION_TIME_IN_DAYS=1
+The retention period is configurable for table, schema, database or account. 
+
+The default `DATA_RETENTION_TIME_IN_DAYS=1`.
 If we want to disable time travel, we can set this to 0. 
 
-We can set this when we create a table or alter is for an existing table
+We can set this when we create a table, or alter it for an existing table:
+```
 ALTER TABLE table_name (
-SET DATA_RETENTION_TIME_IN_DAYS=2)
+    SET DATA_RETENTION_TIME_IN_DAYS=2
+)
+```
 
-We can set a minimum value at the account level
+We can set a *minimum value* at the account level:
+```
 ALTER ACCOUNT SET 
 MIN_ DATA_RETENTION_TIME_IN_DAYS=3
+```
 
-The account type determines the maximum retention period. 
-Standard - 1
-Enterprise or higher - 90
+The **account type determines the maximum retention period**:
+
+- Standard: up to 1 day
+- Enterprise or higher: up to 90 days
 
 
-## Fail Safe
+## 6.4. Fail Safe
 
-This is for recovery beyond time travel.
+This is for **disaster recovery** beyond time travel.
 This is not configurable and set to 7 days beyond time travel period for permanent tables. 
 
-This is for disaster recovery. We as users cannot access this data. We have to contact Snowflake support to restore it for us. 
+We as **users cannot access this data**. We have to **contact Snowflake support** to restore it for us. 
 
 
-## Storage costs
+## 6.5. Storage Costs
+
 Time travel and fail safe contribute to storage costs. 
 You only pay for what is modified. 
-You can see the breakdown in the Admin -> Usage tab. 
-
-You can see how much storage is being used with
-
-SELECT * FROM SNOWFLAKE_ACCOUNT_USAGE.TABLE_STORAGE_METRICS
 
 
-## Table types
+You can see the breakdown in the `Admin -> Usage` tab of the UI.
 
-Permanent - CREATE TABLE. 0-90 days time travel + fail safe. Persist until dropped. 
+You can see how much storage is being used with:
+```
+SELECT * 
+FROM SNOWFLAKE_ACCOUNT_USAGE.TABLE_STORAGE_METRICS
+```
 
-Transient - CREATE TRANSIENT TABLE. 0 or 1 day time travel. No fail safe. Persist until dropped.  For large tables that do not need to be protected. 
 
-Temporary - CREATE TEMPORARY TABLE. 0 or 1 day time travel. No fail safe. Only in session - deleted after the worksheet is closed. Non-permanent data just for this session. 
+## 6.6. Table Types
 
-These types are also available for other Snowflake objects: tables, stages, schema, database. 
-If a database is transient, so are all of its objects. 
+The following table summarises the differences between the 3 types of table.
 
-Temporary table names do not clash with permanent or transient tables. Temporary table takes precedence in the session and hides the others with the same name. 
+| Table Type | Command                | Time Travel Retention Period | Fail Safe | Use Case                                                                                                   |
+|------------|------------------------|------------------------------|-----------|------------------------------------------------------------------------------------------------------------|
+| Permanent  | CREATE TABLE           | 0-90                         | Y         | Standard tables. Persist data until dropped.                                                               |
+| Transient  | CREATE TRANSIENT TABLE | 0-1                          | N         | For large tables that do not need to be protected. Persist data until dropped.                             |
+| Temporary  | CREATE TEMPORARY TABLE | 0-1                          | N         | Non-permanent data just for this session.Only in session - data is deleted after the worksheet is closed.  |
 
-It is not possible to change the type of an existing object. 
+These types are **also available for other Snowflake objects**: tables, stages, schema, database. 
 
+If a **database** is transient, **so are all of its objects**. 
+
+**Temporary table names** do not clash with permanent or transient tables. 
+The temporary table name takes precedence in the session and hides the others with the same name.
+
+It is **not possible to change the type** of an existing object. 
 
 
 
