Make timeseries notes a draft

--- a/posts/ml/timeseries/notes.qmd
+++ b/posts/ml/timeseries/notes.qmd
@@ -4,7 +4,7 @@ description: "Snowflake? Snow Problem."
 date: "2025-02-07"
 # image: "deep_learning_model.png"
 categories: [Engineering, Timeseries]
-# draft: true
+draft: true
 ---
 
 
